# financial_analyst

./: .gitignore  README.md  pyproject.toml
src/financial_analyst/: crew.py  main.py
src/financial_analyst/config/: agents.yaml  tasks.yaml
src/financial_analyst/tools/: __init__.py  batch_processor_tool.py  csv_analyzer_tool.py  schema_mapper_tool.py  visualization_tool.py
