[project]
name = "financial_analyst"
version = "0.1.0"
description = "financial_analyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]

[project.scripts]
financial_analyst = "financial_analyst.main:run"
run_crew = "financial_analyst.main:run"
train = "financial_analyst.main:train"
replay = "financial_analyst.main:replay"
test = "financial_analyst.main:test"
run_with_trigger = "financial_analyst.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
